kubernetes/istio-demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-demo
  labels:
    istio-injection: enabled
spec:
  finalizers:
    - kubernetes
